# netlab

./: .editorconfig  .gitignore  .pylintrc  AGENTS.md  MANIFEST.in  NETLAB_PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_IMPROVEMENTS.md  PROVIDER_BATCH_OPTIMIZATION.md  PR_DESCRIPTION.md  README.md  clab.yml  netlab  netlab.snapshot.yml  performance_patch.py  pyproject.toml  setup.py  test_100_nodes.yml  test_200_nodes.yml  test_300_nodes.yml  test_400_nodes.yml  test_50_nodes.yml  test_performance.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: devcontainer-build.yml  integration.yml  pages.yml  pypi.yml  ruff.yml  t-pull.yml  t-push.yml  t-yamllint.yml  test-pypi.yml
clab_files/r2/: hosts
docs/: caveats.md  customize.md  defaults.md  install.md  platforms.md  plugins.md  providers.md  release-archive.md  release.md  shared_hosts_example.md
docs/dev/: advanced.md  cli-hooks.md  device-platform.md  devices.md  nornir-integration.md  plugins.md  tests.md  validation-alt.txt  validation-basics.txt  validation-ip.txt  validation-shortcut.txt  validation-types.txt  validation-udt.txt  validation.md
docs/example/: external.md  github.md  release.md
docs/install/: clone.md  linux.md  ubuntu-vm.md
docs/labs/: bird.md  clab.md  exos.md  exos.txt  libvirt-box-caveats.md  libvirt.md  (+2 more)
legacy/: setup.py
netsim/: __init__.py
tests/: conftest.py  create-error-tests.sh  create-transformation-test-case.py  run-coverage-tests.sh  run-tests.sh  run-xerr.sh  run-xform.sh  test_nornir_integration.py  test_transformation.py  utils.py
(+570 files in other folders)
