[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "networklab"
description = "CLI-based Virtual Networking Lab Abstraction Layer"
authors = [
  {name = "Ivan Pepelnjak", email = "ip@ipspace.net"},
]
requires-python = ">=3.10"
classifiers = [
  "Topic :: Utilities",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]
dynamic = ["version", "readme", "dependencies"]

[project.urls]
Homepage = "https://github.com/ipspace/netlab"

[project.scripts]
netlab = "netsim.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netsim*"]

[tool.setuptools.dynamic]
version = {attr = "netsim.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}
